# oasysic

ms_prototype/: pyproject.toml
ms_prototype/prototype/: asgi.py  settings.py  urls.py  wsgi.py
