[tool.poetry]
name = "microservices"
version = "0.1.0"
description = ""
authors = ["CWong <cwongsf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
confidential = "^2.6.0"
pika = "^1.3.2"
djangorestframework = "^3.14.0"
confluent-kafka = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"
pytest-xdist = "^3.5.0"
black = {version = "^24.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
